--- a/src/app/features/dried/components/open-lot-form/open-lot-form.component.scss
+++ b/src/app/features/dried/components/open-lot-form/open-lot-form.component.scss
@@ -12,23 +12,53 @@ form {
   height: 100%;
   width: 100%;
   .form-input,
-  ion-datetime {
+  ion-datetime,
+  ion-select {
     color: $color-text-tertiary;
     margin-top: 20px;
     width: 100%;
 
-    .ion-label {
-      --color: black;
+    @include breakpoint-size(ms-extra-small) {
+      font-size: var(--fs-text-xsm);
+    }
+
+    @include breakpoint-size(ms-small) {
+      font-size: var(--fs-text-sm);
+    }
+
+    @include breakpoint-size(ms-extra-large) {
+      font-size: var(--fs-text-xl);
+    }
+  }
+
+  ion-row {
+    ion-item {
       @include breakpoint-size(ms-extra-small) {
-        font-size: var(--fs-text-title-xsm);
+        font-size: var(--fs-text-xsm);
       }
 
       @include breakpoint-size(ms-small) {
-        font-size: var(--fs-text-title-sm);
+        font-size: var(--fs-text-sm);
       }
 
       @include breakpoint-size(ms-extra-large) {
-        font-size: var(--fs-text-title-xl);
+        font-size: var(--fs-text-xl);
+      }
+    }
+
+    .ion-label {
+      --color: black;
+      margin: 10px 0;
+      @include breakpoint-size(ms-extra-small) {
+        font-size: var(--fs-text-xsm);
+      }
+
+      @include breakpoint-size(ms-small) {
+        font-size: var(--fs-text-sm);
+      }
+
+      @include breakpoint-size(ms-extra-large) {
+        font-size: var(--fs-text-xl);
       }
     }
   }
@@ -40,15 +70,15 @@ form {
     transform: 2s;
 
     @include breakpoint-size(ms-extra-small) {
-      font-size: var(--fs-text-title-xsm);
+      font-size: var(--fs-text-error-xsm);
     }
 
     @include breakpoint-size(ms-small) {
-      font-size: var(--fs-text-title-sm);
+      font-size: var(--fs-text-error-sm);
     }
 
     @include breakpoint-size(ms-extra-large) {
-      font-size: var(--fs-text-title-xl);
+      font-size: var(--fs-text-error-xl);
     }
   }
   ion-button {
@@ -62,15 +92,35 @@ form {
     --ion-color-primary: var(--ion-color-primary);
 
     @include breakpoint-size(ms-extra-small) {
-      font-size: var(--fs-text-title-xsm);
+      font-size: var(--fs-text-xsm);
     }
 
     @include breakpoint-size(ms-small) {
-      font-size: var(--fs-text-title-sm);
+      font-size: var(--fs-text-sm);
     }
 
     @include breakpoint-size(ms-extra-large) {
-      font-size: var(--fs-text-title-xl);
+      font-size: var(--fs-text-xl);
     }
   }
+}
+
+::ng-deep ion-action-sheet {
+  --background: white !important;
+  --color: black !important;
+  @include breakpoint-size(ms-extra-small) {
+    font-size: var(--fs-text-xsm);
+  }
+
+  @include breakpoint-size(ms-small) {
+    font-size: var(--fs-text-sm);
+  }
+
+  @include breakpoint-size(ms-extra-large) {
+    font-size: var(--fs-text-xl);
+  }
+}
+
+::ng-deep .action-sheet-button {
+  color: black !important;
 }
