--- a/src/app/features/packaging/pages/close-lot/close-lot.page.html
+++ b/src/app/features/packaging/pages/close-lot/close-lot.page.html
@@ -78,6 +78,7 @@
     </ion-row>
     <ion-row class="row-button">
       <ion-button
+        color="primary"
         class="button"
         (click)="requestCloseLot()"
         [disabled]="lotForm.invalid"
