--- a/src/app/features/packaging/dialogs/generate-report/generate-report.component.html
+++ b/src/app/features/packaging/dialogs/generate-report/generate-report.component.html
@@ -1,17 +1,16 @@
 <ion-content>
   <div class="content">
     <div class="ion-text-center">
-      <ion-label class="title">¡Confirmación!</ion-label>
-    </div>
-    <div class="ion-text-center">
-      <ion-label class="label">Está a punto de {{ action }} un lote.</ion-label>
+      <ion-label class="label"
+        >Una vez que genere el reporte no podrá ser modificado.</ion-label
+      >
     </div>
 
     <div class="ion-text-center buttons">
       <ion-label (click)="cancel()"> Cancelar</ion-label>
 
       <ion-button class="btn" color="primary" size="short" (click)="save()"
-        >Aceptar</ion-button
+        >Generar</ion-button
       >
     </div>
   </div>
