--- a/src/app/features/packaging/pages/exit/exit.page.html
+++ b/src/app/features/packaging/pages/exit/exit.page.html
@@ -10,20 +10,13 @@
         <ion-col size="6">
           <ion-item>
             <ion-label position="floating">Fecha*</ion-label>
-            <ion-datetime
-              class="item-form"
-              placeholder="Ingresar fecha"
-              displayFormat="MM/DD/YYYY"
-              formControlName="date"
-              disabled
-            >
+            <ion-datetime class="item-form" placeholder="Ingresar fecha" displayFormat="MM/DD/YYYY"
+              formControlName="date" disabled>
             </ion-datetime>
           </ion-item>
           <div class="error">
-            <ion-label
-              *ngIf="exitForm.hasError('required', 'date') &&
-            (exitForm.controls.date.touched || exitForm.controls.date.dirty)"
-            >
+            <ion-label *ngIf="exitForm.hasError('required', 'date') &&
+            (exitForm.controls.date.touched || exitForm.controls.date.dirty)">
               Por favor seleccione una fecha
             </ion-label>
           </div>
@@ -31,17 +24,23 @@
         <ion-col>
           <ion-item>
             <ion-label position="floating">Lote de proveedor</ion-label>
-            <ion-input
+            <!-- <ion-input
               class="item-form"
               placeholder="Ingresa lote proveedor"
               formControlName="loteId"
-            ></ion-input>
+            ></ion-input> -->
+
+
+            <ion-select value="peperoni" [interfaceOptions]="customOptions" interface="action-sheet"
+              formControlName="loteId" (ionChange)="selectLot($event)" placeholder="Selecciones Lote de proveedor">
+              <ion-select-option *ngFor="let lot of lots$ | async" [value]="lot">{{lot.loteId}}</ion-select-option>
+            </ion-select>
+
+
           </ion-item>
           <div class="error">
-            <ion-label
-              *ngIf="exitForm.hasError('required', 'loteId') &&
-            (exitForm.controls.loteId.touched || exitForm.controls.loteId.dirty)"
-            >
+            <ion-label *ngIf="exitForm.hasError('required', 'loteId') &&
+            (exitForm.controls.loteId.touched || exitForm.controls.loteId.dirty)">
               Por favor seleccione un lote
             </ion-label>
           </div>
@@ -51,25 +50,15 @@
         <ion-col size="6">
           <ion-item>
             <ion-label position="floating">Producto*</ion-label>
-            <ion-select
-              class="item-form"
-              interface="action-sheet"
-              placeholder="Seleccione un producto"
-              formControlName="product"
-              [disabled]="loading"
-            >
-              <ion-select-option
-                *ngFor="let product of products "
-                [value]="product.id"
-                >{{product.description}}</ion-select-option
-              >
+            <ion-select class="item-form" interface="action-sheet" placeholder="Seleccione un producto"
+              formControlName="product" [disabled]="loading">
+              <ion-select-option *ngFor="let product of products " [value]="product.id">{{product.description}}
+              </ion-select-option>
             </ion-select>
           </ion-item>
           <div class="error">
-            <ion-label
-              *ngIf="exitForm.hasError('required', 'product') &&
-            (exitForm.controls.product.touched || exitForm.controls.product.dirty)"
-            >
+            <ion-label *ngIf="exitForm.hasError('required', 'product') &&
+            (exitForm.controls.product.touched || exitForm.controls.product.dirty)">
               Seleccione un producto
             </ion-label>
           </div>
@@ -77,18 +66,12 @@
         <ion-col size="6">
           <ion-item>
             <ion-label position="floating">Cantidad*</ion-label>
-            <ion-input
-              type="number"
-              class="item-form"
-              placeholder="Ingresa cantidad"
-              formControlName="quantity"
-            ></ion-input>
+            <ion-input type="number" class="item-form" placeholder="Ingresa cantidad" formControlName="quantity">
+            </ion-input>
           </ion-item>
           <div class="error">
-            <ion-label
-              *ngIf="exitForm.hasError('required', 'quantity') &&
-            (exitForm.controls.quantity.touched || exitForm.controls.quantity.dirty)"
-            >
+            <ion-label *ngIf="exitForm.hasError('required', 'quantity') &&
+            (exitForm.controls.quantity.touched || exitForm.controls.quantity.dirty)">
               Ingrese una cantidad
             </ion-label>
           </div>
@@ -97,34 +80,25 @@
       <ion-row>
         <ion-item>
           <ion-label position="floating">Nombre de quien saco*</ion-label>
-          <ion-input
-            class="item-form"
-            placeholder="Ingresa nombre"
-            formControlName="name"
-          ></ion-input>
+          <ion-input class="item-form" placeholder="Ingresa nombre" formControlName="name"></ion-input>
         </ion-item>
       </ion-row>
     </ion-grid>
     <div class="error">
-      <ion-label
-        *ngIf="exitForm.hasError('required', 'name') &&
-      (exitForm.controls.name.touched || exitForm.controls.name.dirty)"
-      >
+      <ion-label *ngIf="exitForm.hasError('required', 'name') &&
+      (exitForm.controls.name.touched || exitForm.controls.name.dirty)">
         Por favor ingrese un nombre
       </ion-label>
     </div>
   </form>
   <ion-grid class="footer-container">
     <ion-row class="row-stepper">
-      <ion-col size="12"> <warehouse-stepper></warehouse-stepper></ion-col>
+      <ion-col size="12">
+        <warehouse-stepper></warehouse-stepper>
+      </ion-col>
     </ion-row>
     <ion-row class="row-button">
-      <ion-button
-        (click)="requestExit()"
-        class="button"
-        color="primary"
-        [disabled]="exitForm.invalid"
-      >
+      <ion-button (click)="requestExit()" class="button" color="primary" [disabled]="exitForm.invalid">
         <ion-grid>
           <ion-row *ngIf="!loading">
             <ion-col size="10" class="label">Crear reporte</ion-col>
@@ -135,6 +109,11 @@
           <ion-spinner *ngIf="loading" name="crescent"></ion-spinner>
         </ion-grid>
       </ion-button>
+    </ion-row>
+    <ion-row>
+      <ion-col size="12">
+        {{exitForm.value | json}}
+      </ion-col>
     </ion-row>
   </ion-grid>
 </div>
