--- a/src/app/features/dried/pages/output/output.page.html
+++ b/src/app/features/dried/pages/output/output.page.html
@@ -11,22 +11,20 @@
       </ion-col>
     </ion-row>
     <ion-row size="12">
-      <exit-lot-form
-        #form
-        (onSubmit)="onSubmit($event)"
-        [lots]="lots$|async"
-      ></exit-lot-form>
+      <exit-lot-form #form (onSubmit)="onSubmit($event)" [lots]="lots$|async"></exit-lot-form>
     </ion-row>
   </ion-grid>
   <ion-grid class="footer">
     <ion-row class="row-stepper">
-      <ion-col size="12"> <warehouse-stepper></warehouse-stepper></ion-col>
+      <ion-col size="12">
+        <warehouse-stepper></warehouse-stepper>
+      </ion-col>
     </ion-row>
     <ion-row class="row-button">
       <ion-button (click)="form.onSubmit()" [disabled]="form.form.invalid">
         <ion-grid>
           <ion-col>
-            Crear reporte
+            Registrar salida
           </ion-col>
           <ion-spinner *ngIf="false" name="crescent"></ion-spinner>
         </ion-grid>
