--- a/src/app/features/dried/components/open-lot-form/open-lot-form.component.html
+++ b/src/app/features/dried/components/open-lot-form/open-lot-form.component.html
@@ -2,74 +2,53 @@
   <ion-grid fixed>
     <ion-row>
       <ion-item class="form-input">
-        <ion-label class="ion-label" position="floating">Lote*</ion-label>
-
-        <ion-select
-          placeholder="Ingresa lote"
-          style="--placeholder-color: black; --placeholder-opacity: 0.9;"
-          formControlName="loteId"
-          interface="action-sheet"
-          (ionBlur)="change()"
-          [disabled]="disabled(lots)"
-        >
-          <ng-container *ngFor="let lot of lots">
-            <ion-select-option [value]="lot">
-              {{ lot.loteId }}
-            </ion-select-option>
-          </ng-container>
-        </ion-select>
-      </ion-item>
-    </ion-row>
-    <div class="error">
-      <ion-label
-        *ngIf="
-          form.hasError('required', 'loteId') &&
-          (form.controls.loteId.touched || form.controls.loteId.dirty)
-        "
-      >
-        Este campo es requerido.
-      </ion-label>
-    </div>
-    <ion-row>
-      <ion-item class="form-input">
         <ion-label class="ion-label" position="floating">Producto*</ion-label>
 
-        <ion-select
-          placeholder="Seleccione un producto"
-          interface="action-sheet"
-          (ionChange)="onChangeProduct($event)"
-          [disabled]="disabled(filterProducts)"
-        >
-          <ng-container *ngFor="let product of filterProducts">
+        <ion-select placeholder="Ingresa lote" style="--placeholder-color: black; --placeholder-opacity: 0.9;"
+          (ionChange)="selectProduct($event)" interface="action-sheet" [disabled]="disabled(products)">
+          <ng-container *ngFor="let product of products">
             <ion-select-option [value]="product">
-              {{ product.description }} - {{ product.quantity }}
+              {{ product.product }}
             </ion-select-option>
           </ng-container>
         </ion-select>
       </ion-item>
     </ion-row>
     <div class="error">
-      <ion-label
-        *ngIf="
+      <ion-label *ngIf="
           form.hasError('required', 'productId') &&
+          (form.controls.loteId.touched || form.controls.loteId.dirty)
+        ">
+        Este campo es requerido.
+      </ion-label>
+    </div>
+    <ion-row>
+      <ion-item class="form-input">
+        <ion-label class="ion-label" position="floating">Lote*</ion-label>
+
+        <ion-select placeholder="Seleccione un producto" interface="action-sheet" (ionChange)="onChangeLot($event)"
+          [disabled]="disabled(lots)">
+          <ng-container *ngFor="let lot of lots">
+            <ion-select-option [value]="lot">
+              {{ lot.lot }}
+            </ion-select-option>
+          </ng-container>
+        </ion-select>
+      </ion-item>
+    </ion-row>
+    <div class="error">
+      <ion-label *ngIf="
+          form.hasError('required', 'loteId') &&
           (form.controls.productId.touched || form.controls.productId.dirty)
-        "
-      >
+        ">
         Este campo es requerido.
       </ion-label>
     </div>
 
     <ion-row>
       <ion-item class="form-input">
-        <ion-label class="ion-label" position="floating"
-          >Fecha de apertura</ion-label
-        >
-        <ion-datetime
-          formControlName="date"
-          placeholder="dd/mm/yyyy"
-          displayFormat="DD/MM/YYYY"
-          readonly
-        >
+        <ion-label class="ion-label" position="floating">Fecha de apertura</ion-label>
+        <ion-datetime formControlName="date" placeholder="dd/mm/yyyy" displayFormat="DD/MM/YYYY" readonly>
         </ion-datetime>
       </ion-item>
     </ion-row>
