--- a/src/app/features/packaging/pages/exit/exit.page.html
+++ b/src/app/features/packaging/pages/exit/exit.page.html
@@ -9,7 +9,7 @@
       <ion-row>
         <ion-col size="6">
           <ion-item>
-            <ion-label position="floating">Fecha*</ion-label>
+            <ion-label position="floating">Fecha</ion-label>
             <ion-datetime class="item-form" placeholder="Ingresar fecha" displayFormat="MM/DD/YYYY"
               formControlName="date" disabled>
             </ion-datetime>
@@ -17,22 +17,23 @@
           <div class="error">
             <ion-label *ngIf="exitForm.hasError('required', 'date') &&
             (exitForm.controls.date.touched || exitForm.controls.date.dirty)">
-              Por favor seleccione una fecha
+              Seleccione una fecha
             </ion-label>
           </div>
         </ion-col>
         <ion-col>
           <ion-item>
-            <ion-label position="floating">Lote de proveedor</ion-label>
+            <ion-label position="floating">Producto*</ion-label>
             <ion-select value="peperoni" [interfaceOptions]="customOptions" interface="action-sheet"
-              formControlName="loteId" (ionChange)="selectLot($event)" placeholder="Selecciones Lote de proveedor">
-              <ion-select-option *ngFor="let lot of lots$ | async" [value]="lot">{{lot.loteId}}</ion-select-option>
+              (ionChange)="selectProduct($event)" placeholder="Seleccione un producto">
+              <ion-select-option *ngFor="let product of products" [value]="product">{{product.product}}
+              </ion-select-option>
             </ion-select>
           </ion-item>
           <div class="error">
             <ion-label *ngIf="exitForm.hasError('required', 'loteId') &&
             (exitForm.controls.loteId.touched || exitForm.controls.loteId.dirty)">
-              Por favor seleccione un lote
+              Seleccione un producto
             </ion-label>
           </div>
         </ion-col>
@@ -40,17 +41,17 @@
       <ion-row>
         <ion-col size="6">
           <ion-item>
-            <ion-label position="floating">Producto*</ion-label>
-            <ion-select class="item-form" interface="action-sheet" placeholder="Seleccione un producto"
-              formControlName="product" [disabled]="loading">
-              <ion-select-option *ngFor="let product of products " [value]="product.id">{{product.description}}
+            <ion-label position="floating">Lote*</ion-label>
+            <ion-select class="item-form" interface="action-sheet" placeholder="Seleccione un lote"
+              formControlName="loteId" [disabled]="loading">
+              <ion-select-option *ngFor="let lot of lots$ | async " [value]="lot.warehouseId">{{lot.lot}}
               </ion-select-option>
             </ion-select>
           </ion-item>
           <div class="error">
             <ion-label *ngIf="exitForm.hasError('required', 'product') &&
             (exitForm.controls.product.touched || exitForm.controls.product.dirty)">
-              Seleccione un producto
+              Seleccione un lote
             </ion-label>
           </div>
         </ion-col>
