--- a/src/app/features/dried/components/exit-lot-form/exit-lot-form.component.html
+++ b/src/app/features/dried/components/exit-lot-form/exit-lot-form.component.html
@@ -3,69 +3,53 @@
     <ion-row>
       <ion-item class="form-input">
         <ion-label class="ion-label" position="floating">
-          Lote de proveedor*
+          Producto*
         </ion-label>
-        <ion-select
-          style="--placeholder-color: black; --placeholder-opacity: 0.9;"
-          placeholder="Seleccione lote*"
-          interface="action-sheet"
-          formControlName="loteId"
-          (ionBlur)="change()"
-          [disabled]="disabled(lots)"
-        >
-          <ng-container *ngFor="let lot of lots">
-            <ion-select-option [value]="lot">
-              {{ lot.loteId }}
+        <ion-select style="--placeholder-color: black; --placeholder-opacity: 0.9;" placeholder="Seleccione lote*"
+          interface="action-sheet" (ionChange)="selectProduct($event)" [disabled]="disabled(products)">
+          <ng-container *ngFor="let product of products">
+            <ion-select-option [value]="product">
+              {{ product.product }}
             </ion-select-option>
           </ng-container>
         </ion-select>
       </ion-item>
     </ion-row>
     <div class="error">
-      <ion-label
-        *ngIf="
+      <ion-label *ngIf="
           form.hasError('required', 'loteId') &&
           (form.controls.loteId.touched || form.controls.loteId.dirty)
-        "
-      >
+        ">
         Este campo es requerido.
       </ion-label>
     </div>
 
     <ion-row>
       <ion-item class="form-input">
-        <ion-label class="ion-label" position="floating">Producto*</ion-label>
+        <ion-label class="ion-label" position="floating">Lote de proveedor*</ion-label>
 
-        <ion-select
-          placeholder="Seleccione un producto*"
-          formControlName="productId"
-          interface="action-sheet"
-          [disabled]="disabled(filterProducts)"
-        >
-          <ng-container *ngFor="let product of filterProducts">
-            <ion-select-option [value]="product.id">
-              {{ product.description }}
+        <ion-select placeholder="Seleccione un producto*" interface="action-sheet" (ionChange)="onChangeLot($event)"
+          [disabled]="disabled(lots)">
+          <ng-container *ngFor="let lot of lots">
+            <ion-select-option [value]="lot">
+              {{ lot.lot }}
             </ion-select-option>
           </ng-container>
         </ion-select>
       </ion-item>
     </ion-row>
     <div class="error">
-      <ion-label
-        *ngIf="
+      <ion-label *ngIf="
           form.hasError('required', 'productId') &&
           (form.controls.productId.touched || form.controls.productId.dirty)
-        "
-      >
+        ">
         Este campo es requerido.
       </ion-label>
     </div>
 
     <ion-row>
       <ion-item class="form-input">
-        <ion-label class="ion-label" position="floating"
-          >Observaciones</ion-label
-        >
+        <ion-label class="ion-label" position="floating">Observaciones</ion-label>
         <ion-textarea rows="3" formControlName="observations"></ion-textarea>
       </ion-item>
     </ion-row>
