--- a/src/app/features/dried/pages/close-lot/close-lot.page.html
+++ b/src/app/features/dried/pages/close-lot/close-lot.page.html
@@ -8,18 +8,14 @@
       </ion-col>
     </ion-row>
     <ion-row size="12">
-      <close-lot-form
-        #form
-        (onSubmit)="onSubmit($event)"
-        [lots]="lots$|async"
-      ></close-lot-form>
+      <close-lot-form #form (onSubmit)="onSubmit($event)" [products]="products$ | async"></close-lot-form>
     </ion-row>
   </ion-grid>
   <ion-grid class="footer">
     <ion-row class="row-stepper">
       <ion-col size="12">
-        <warehouse-stepper></warehouse-stepper
-      ></ion-col>
+        <warehouse-stepper></warehouse-stepper>
+      </ion-col>
     </ion-row>
     <ion-row class="row-button">
       <ion-button (click)="form.onSubmit()" [disabled]="form.form.invalid">
