--- a/src/app/features/packaging/pages/open-lot/open-lot.page.html
+++ b/src/app/features/packaging/pages/open-lot/open-lot.page.html
@@ -4,83 +4,59 @@
   <form [formGroup]="lotForm" class="body-container" (onchange)="checkValues()">
     <ion-row>
       <ion-item>
-        <ion-label position="floating">Lote*</ion-label>
-        <ion-select
-          class="item-form"
-          interface="action-sheet"
-          placeholder="Seleccione un producto"
-          formControlName="serie"
-          (ionChange)="selectLot()"
-          [disabled]="lots.length ==0"
-        >
-          <ng-container *ngFor="let lot of lots">
-            <ion-select-option [value]="lot"> {{lot.loteId}}</ion-select-option>
+        <ion-label position="floating">Producto*</ion-label>
+        <ion-select class="item-form" interface="action-sheet" placeholder="Seleccione un producto"
+          (ionChange)="selectLot($event)" [disabled]="products.length == 0">
+          <ng-container *ngFor="let product of products">
+            <ion-select-option [value]="product"> {{product.product}}</ion-select-option>
           </ng-container>
         </ion-select>
       </ion-item>
     </ion-row>
     <div class="error">
-      <ion-label
-        *ngIf="lotForm.hasError('required', 'serie') &&
-      (lotForm.controls.serie.touched || lotForm.controls.serie.dirty)"
-      >
-        Por favor seleccione un lote
+      <ion-label *ngIf="lotForm.hasError('required', 'productId') &&
+      (lotForm.controls.serie.touched || lotForm.controls.serie.dirty)">
+        Seleccione un producto
       </ion-label>
     </div>
     <ion-row>
       <ion-item>
-        <ion-label position="floating">Producto*</ion-label>
-        <ion-select
-          class="item-form"
-          interface="action-sheet"
-          placeholder="Seleccione un producto"
-          formControlName="product"
-          [disabled]="serie.value==''"
-        >
-          <ng-container *ngFor="let product of serie.value.products">
-            <ion-select-option [value]="product.id"
-              >{{product.description}}</ion-select-option
-            >
+        <ion-label position="floating">Lote de proveedor*</ion-label>
+        <ion-select class="item-form" interface="action-sheet" placeholder="Seleccione un producto"
+          formControlName="serie" [disabled]="lots.length == 0">
+          <ng-container *ngFor="let lot of lots">
+            <ion-select-option [value]="lot">{{lot.lot}}</ion-select-option>
           </ng-container>
         </ion-select>
       </ion-item>
     </ion-row>
     <div class="error">
-      <ion-label
-        *ngIf="lotForm.hasError('required', 'product') &&
-      (lotForm.controls.product.touched || lotForm.controls.product.dirty)"
-      >
-        Por favor seleccione un producto
+      <ion-label *ngIf="lotForm.hasError('required', 'serie') &&
+      (lotForm.controls.serie.touched || lotForm.controls.serie.dirty)">
+        Seleccione un lote
       </ion-label>
     </div>
     <ion-row>
       <ion-item>
         <ion-label position="floating">Fecha de apertura*</ion-label>
-        <ion-datetime
-          class="item-form"
-          placeholder="Ingresar fecha"
-          displayFormat="MM/DD/YYYY"
-          formControlName="date"
-          disabled
-        ></ion-datetime>
+        <ion-datetime class="item-form" placeholder="Ingresar fecha" displayFormat="MM/DD/YYYY" formControlName="date"
+          disabled></ion-datetime>
       </ion-item>
     </ion-row>
     <div class="error">
       <ion-label *ngIf="date.errors">
-        Por favor seleccione una fecha
+        Seleccione una fecha
       </ion-label>
     </div>
   </form>
   <ion-grid class="footer-container">
     <ion-row class="row-stepper">
-      <ion-col size="12"> <warehouse-stepper></warehouse-stepper></ion-col>
+      <ion-col size="12">
+        <warehouse-stepper></warehouse-stepper>
+      </ion-col>
     </ion-row>
     <ion-row class="row-button">
-      <ion-button
-        (click)="requestOpenLote()"
-        [disabled]="lotForm.invalid"
-        class="button"
-      >
+      <ion-button (click)="requestOpenLote()" [disabled]="lotForm.invalid" class="button">
         <ion-grid>
           <ion-col *ngIf="!loading" size="12">Abrir lote</ion-col>
           <ion-spinner *ngIf="loading" name="crescent"></ion-spinner>
